# DrawingRobot

./: .gitignore  readme.md
NewFeatures/: CMakeLists.txt  commandQ.cpp  commandQ.h  commands.cpp  commands.h  main.cpp
simulation/: compressor.py  consts.py  kinematics.py  png2svg.py  sim.py
